services/kubernetes/manifests/jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: downloaders
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
        setGateway: "true" # route traffic through pod-gateway
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.24.2237
          ports:
            - name: http
              containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
        - name: downloads
          nfs:
            server: media.home.lan
            path: /exports/media/.torrents/watch
