services/kubernetes/manifests/jackett/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: downloaders
  labels:
    app: jackett
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - name: http
      port: 9117
      targetPort: http
