services/kubernetes/manifests/jackett/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jackett
  namespace: downloaders
  labels:
    app: jackett
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: jackett.home.lan
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jackett
  namespace: downloaders
  labels:
    app: jackett
spec:
  parentRefs:
    - name: jackett
      namespace: downloaders
  hostnames:
    - jackett.home.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jackett
          port: 9117
